tsparser/src/parser/types/snapshots/encore_tsparser__parser__types__tests__resolve_types@export_wildcard.txt.snap
---
source: tsparser/src/parser/types/tests.rs
expression: result
input_file: tsparser/src/parser/types/testdata/export_wildcard.txt
---
{
    "foo": Interface(
        Interface {
            fields: [
                InterfaceField {
                    name: String(
                        "bar",
                    ),
                    optional: false,
                    typ: Basic(
                        String,
                    ),
                },
            ],
            index: None,
            call: None,
        },
    ),
}
