tsparser/src/parser/types/snapshots/encore_tsparser__parser__types__tests__resolve_types@namespace_import.txt.snap
---
source: tsparser/src/parser/types/tests.rs
expression: result
input_file: tsparser/src/parser/types/testdata/namespace_import.txt
---
{
    "TestBar": Basic(
        Never,
    ),
    "TestBaz": Basic(
        Never,
    ),
}
