tsparser/src/parser/types/snapshots/encore_tsparser__parser__types__tests__resolve_types@reexport_single.txt.snap
---
source: tsparser/src/parser/types/tests.rs
expression: result
input_file: tsparser/src/parser/types/testdata/reexport_single.txt
---
{
    "foo": Interface(
        Interface {
            fields: [
                InterfaceField {
                    name: String(
                        "bar",
                    ),
                    optional: false,
                    typ: Basic(
                        String,
                    ),
                },
            ],
            index: None,
            call: None,
        },
    ),
}
