tsparser/src/parser/types/snapshots/encore_tsparser__parser__types__tests__resolve_types@reexport_wildcard.txt.snap
---
source: tsparser/src/parser/types/tests.rs
expression: result
input_file: tsparser/src/parser/types/testdata/reexport_wildcard.txt
---
{
    "foo": Literal(
        String(
            "foo",
        ),
    ),
}
